Házi Feladat Végleges

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Angol kisgőzösök">
+    <meta name="keywords" content="angol kisgőzös, gőzmozdony,mozdony,gőzös">
+    <meta name="author" content="angol kisgőzös">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Angol Kis Gőzösök</title>
+    <title>Kádár Péter</title>
     <link rel="stylesheet" href="stilus.css">
+    <link rel="icon" type="image/x-icon" href="kepek/gozos.png">
 </head>
 <body>
     <header>
