--- a/index.html
+++ b/index.html
@@ -25,32 +25,33 @@
     <main class="container">
         <section class="szekcio" id="LMS_Jinty">
             <h2>LMS Jinty</h2>
-            <p>A Jinty-ket a London Midland Scottish railway építette először 1924-ben...</p>
+            <p>A Jinty-ket a London Midland Scottish railway építette elősször 1924-ben. Összesen 422 építettek. Az utolsót 1967-kor vonták ki a forgalomból a British Railways tulajdonában.</p>
             <img src="kepek/Jinty.jpg" alt="Jinty">
         </section>
         <section class="szekcio" id="Lbscr_Terrier">
             <h2>Lbscr Terrier</h2>
-            <p>A Terrier-eket a London, Brighton and South Coast Railway építette először 1872-ben...</p>
+            <p>A Terrier-eket a London, Brighton and South Coast Railway építette elősször 1872-ben. Érdekes módon ezeket a kis mozdonyokat eredetileg expressz vonatok húzására találták ki. Az utolsót 1963-ban vonták ki a forgalomból a British Railways tulajdonában.</p>
             <img src="kepek/lbser.webp" alt="Lbscr Terrier">
         </section>
         <section class="szekcio" id="Lbscr_E2">
             <h2>Lbscr E2</h2>
-            <p>Az E2-seket a London, Brighton and South Coast Railway építette először 1913-ban...</p>
+            <p>Az E2-seket a London, Brighton and South Coast Railway építette elősször 1913-ban. Ez a falyta mozdony nem más mint Thomas a gőzmozdony valódi megfelelője, de ellentétben Thomas-sal ezek a mozdonyok nem voltak nagyon hasznosak mert kevés szenet tudtak tárolni. Az utolsót 1963-ban vonták ki a forgalomból a British Railways tulajdonában.
+            </p>
             <img src="kepek/Usefull.webp" alt="Lbscr E2">
         </section>
         <section class="szekcio" id="Austerity_tank">
             <h2>Austerity tank</h2>
-            <p>Az Austerity tank-ek az egyik legmodernebb mozdony ezen a listán...</p>
+            <p>Az Austerity tank-ek az egyik legmodernebb mozdony ezen a listán amit a War Department építette elősször 1943-ban. Ezek a mozdonyok leginkább ipari munkát végeztek. Az utolsót 1984-ben vonták ki a forgalomból gyári tulajdonban.</p>
             <img src="kepek/replacement.webp" alt="Austerity tank">
         </section>
         <section class="szekcio" id="GWR_Pannier">
             <h2>GWR Pannier</h2>
-            <p>A GWR Pannier tank-eket először a Great Western Railway építette 1929-ben...</p>
+            <p>A GWR Pannier tank-eket elősször a Great Western Railway építette 1929-ben. Ezek a mozdonyok a leginkább elterjedt az összes közül összesen 863-mat építettek. Az utolsót 1971-ben vonták ki a British Railways tulajdonában.</p>
             <img src="kepek/Pannier.jpg" alt="GWR Pannier">
         </section>
         <section class="szekcio" id="GWR_14XX">
             <h2>GWR 14XX</h2>
-            <p>A GWR 14XX-eket ("Auto Tank-eket") először a Great Western Railway építette 1932-ben...</p>
+            <p>A GWR 14XX-eket ("Auto Tank-eket") elősször a Great Western Railway építette 1932-ben. Ezeket a mozdonyokat szárny vonalakra tervezték utasvonatok húzására. Az utolsót 1965-ben vonták ki a British Railways tulajdonában.</p>
             <img src="kepek/lbser.webp" alt="GWR 14XX">
         </section>
     </main>
